Fix Swedish translations: Newsletter -> Nyhetsbrev

--- a/src/i18n/locales/sv/admin.json
+++ b/src/i18n/locales/sv/admin.json
@@ -36,12 +36,12 @@
   "recentWheels": "Senaste Hjul",
   "by": "av",
   "unknown": "Okänd",
-  "newsletter": "Newsletter",
+  "newsletter": "Nyhetsbrev",
   "affiliates": "Affiliates",
   "emailStats": {
-    "title": "Email & Lead Generation",
+    "title": "Email & Lead-generering",
     "quizLeads": "Quiz Leads",
-    "newsletters": "Newsletters",
+    "newsletters": "Nyhetsbrev",
     "last7Days": "Senaste 7 dagarna",
     "thisMonth": "Denna månad",
     "totalRecipients": "Totalt mottagare",
@@ -53,11 +53,11 @@
     "project": "📋 Projekt",
     "education": "🎓 Utbildning",
     "deliverySuccessRate": "Leverans framgångsgrad",
-    "sendNewsletter": "Skicka Newsletter",
-    "leadGenInsights": "Lead Generation Insights",
+    "sendNewsletter": "Skicka Nyhetsbrev",
+    "leadGenInsights": "Lead-generering Insikter",
     "activeLeadsThisMonth": "Aktiva leads denna månad",
     "highPriorityLeads": "högprioriterade leads",
-    "newsletterEngagement": "Newsletter engagemang",
+    "newsletterEngagement": "Nyhetsbrev engagemang",
     "totalReach": "Total räckvidd denna period",
     "leadToCustomer": "Lead till kund",
     "convertedSuccessfully": "konverterade framgångsrikt"
