complete i18n translations for dependency and wheel linking features in both modals

--- a/src/i18n/locales/en/editor.json
+++ b/src/i18n/locales/en/editor.json
@@ -141,6 +141,8 @@
   },
   "addItemModal": {
     "title": "Add New Item",
+    "basicInfo": "Basic Information",
+    "categorization": "Categorization",
     "itemNameLabel": "Item Name *",
     "itemNamePlaceholder": "e.g., Christmas campaign",
     "itemNameRequired": "Name is required",
@@ -175,11 +177,45 @@
     "duration2weeks": "2 weeks",
     "recurringPreview": "Will create {{count}} activities:",
     "andMore": "...and {{count}} more",
+    "descriptionLabel": "Description",
+    "descriptionPlaceholder": "Add details about this activity...",
     "cancel": "Cancel",
-    "addItem": "Add Item"
+    "addItem": "Add Item",
+    "advancedSettings": "Advanced Settings",
+    "dependencies": {
+      "title": "Activity Dependencies",
+      "dependsOnLabel": "Depends on activity",
+      "noDependency": "None (independent activity)",
+      "typeLabel": "Dependency type",
+      "typeFinishToStart": "Finish → Start (most common)",
+      "typeStartToStart": "Start → Start (parallel)",
+      "typeFinishToFinish": "Finish → Finish (synchronized)",
+      "typeHintFinishToStart": "This activity starts when the previous one ends",
+      "typeHintStartToStart": "This activity starts at the same time as the previous one",
+      "typeHintFinishToFinish": "This activity finishes at the same time as the previous one",
+      "lagDaysLabel": "Delay (days)",
+      "lagDaysPlaceholder": "0",
+      "lagDaysHint": "Number of days to wait after the previous activity (0 = no delay)",
+      "chainTitle": "🔗 Dependency chain:",
+      "currentItem": "(this)",
+      "recurringRestriction": "Recurring activities cannot have dependencies",
+      "startDateAutoCalculated": "Start date is automatically calculated based on the dependency"
+    },
+    "wheelLinking": {
+      "title": "Link to Another Wheel",
+      "selectLabel": "Select wheel",
+      "noLink": "No link",
+      "helpText": "Link this event to another wheel for reference or details",
+      "linkedTo": "Linked to:",
+      "loadingWheels": "Loading wheels...",
+      "noWheelsAvailable": "No wheels available for linking",
+      "recurringRestriction": "Recurring activities cannot be linked to other wheels"
+    }
   },
   "editItemModal": {
     "title": "Edit Item",
+    "basicInfo": "Basic Information",
+    "categorization": "Categorization",
     "itemNameLabel": "Name *",
     "itemNamePlaceholder": "e.g., Christmas campaign",
     "itemNameRequired": "Name is required",
@@ -195,21 +231,57 @@
     "linkedTo": "Linked to",
     "linkWillOpenInNewTab": "Clicking the link icon will open this wheel in a new tab",
     "startDateLabel": "Start Date *",
+    "startDateAutoCalculated": "(auto-calculated)",
     "startDateRequired": "Start date is required",
     "endDateLabel": "End Date *",
+    "endDateDurationCalculated": "(duration calculated)",
     "endDateRequired": "End date is required",
     "endDateInvalid": "End date must be after start date",
     "timeLabel": "Time",
     "timePlaceholder": "e.g., 09:00 - 17:00",
     "recurringNotice": "Recurring Activity",
     "recurringNoticeText": "This is part of a recurring activity series. Changes will only affect this instance.",
+    "descriptionLabel": "Description",
+    "descriptionPlaceholder": "Add details about this activity...",
+    "advancedSettings": "Advanced Settings",
+    "showAdvancedSettings": "+ Advanced Settings",
+    "hideAdvancedSettings": "Hide",
     "deleteButton": "Delete",
     "cancel": "Cancel",
     "save": "Save",
     "deleteConfirmTitle": "Delete Item?",
     "deleteConfirmMessage": "Are you sure you want to delete \"{itemName}\"? This action cannot be undone.",
     "deleteConfirmCancel": "Cancel",
-    "deleteConfirmDelete": "Delete"
+    "deleteConfirmDelete": "Delete",
+    "dependencies": {
+      "title": "Activity Dependencies",
+      "dependsOnLabel": "Depends on activity",
+      "noDependency": "None (independent activity)",
+      "typeLabel": "Dependency type",
+      "typeFinishToStart": "Finish → Start (most common)",
+      "typeStartToStart": "Start → Start (parallel)",
+      "typeFinishToFinish": "Finish → Finish (synchronized)",
+      "typeHintFinishToStart": "This activity starts when the previous one ends",
+      "typeHintStartToStart": "This activity starts at the same time as the previous one",
+      "typeHintFinishToFinish": "This activity finishes at the same time as the previous one",
+      "lagDaysLabel": "Delay (days)",
+      "lagDaysPlaceholder": "0",
+      "lagDaysHint": "Number of days to wait after the previous activity (0 = no delay)",
+      "chainTitle": "🔗 Dependency chain:",
+      "currentItem": "(this)",
+      "recurringRestriction": "Recurring activities cannot have dependencies",
+      "startDateAutoCalculated": "Start date is automatically calculated based on the dependency"
+    },
+    "wheelLinking": {
+      "title": "Link to Another Wheel",
+      "selectLabel": "Select wheel",
+      "noLink": "No link",
+      "helpText": "Link this event to another wheel for reference or details",
+      "linkedTo": "Linked to:",
+      "loadingWheels": "Loading wheels...",
+      "noWheelsAvailable": "No wheels available for linking",
+      "recurringRestriction": "Recurring activities cannot be linked to other wheels"
+    }
   },
   "pageNavigator": {
     "createFirstYear": "Create first year",
