--- a/src/i18n/locales/sv/editor.json
+++ b/src/i18n/locales/sv/editor.json
@@ -141,6 +141,8 @@
   },
   "addItemModal": {
     "title": "Lägg till ny händelse",
+    "basicInfo": "Grundläggande information",
+    "categorization": "Kategorisering",
     "itemNameLabel": "Händelsens namn *",
     "itemNamePlaceholder": "t.ex., Julkampanj",
     "itemNameRequired": "Namn är obligatoriskt",
@@ -175,11 +177,45 @@
     "duration2weeks": "2 veckor",
     "recurringPreview": "Kommer att skapa {{count}} aktiviteter:",
     "andMore": "...och {{count}} till",
+    "descriptionLabel": "Beskrivning",
+    "descriptionPlaceholder": "Lägg till detaljer om denna aktivitet...",
     "cancel": "Avbryt",
-    "addItem": "Lägg till händelse"
+    "addItem": "Lägg till aktivitet",
+    "advancedSettings": "Avancerade inställningar",
+    "dependencies": {
+      "title": "Aktivitetsberoende",
+      "dependsOnLabel": "Beror på aktivitet",
+      "noDependency": "Ingen (oberoende aktivitet)",
+      "typeLabel": "Beroendetyp",
+      "typeFinishToStart": "Slut → Start (vanligast)",
+      "typeStartToStart": "Start → Start (parallell)",
+      "typeFinishToFinish": "Slut → Slut (synkroniserad)",
+      "typeHintFinishToStart": "Denna aktivitet startar när föregående avslutas",
+      "typeHintStartToStart": "Denna aktivitet startar samtidigt med föregående",
+      "typeHintFinishToFinish": "Denna aktivitet avslutas samtidigt med föregående",
+      "lagDaysLabel": "Fördröjning (dagar)",
+      "lagDaysPlaceholder": "0",
+      "lagDaysHint": "Antal dagar att vänta efter föregående aktivitet (0 = ingen fördröjning)",
+      "chainTitle": "🔗 Beroendekedja:",
+      "currentItem": "(denna)",
+      "recurringRestriction": "Återkommande aktiviteter kan inte ha beroenden",
+      "startDateAutoCalculated": "Startdatum beräknas automatiskt baserat på beroendet"
+    },
+    "wheelLinking": {
+      "title": "Länka till annat hjul",
+      "selectLabel": "Välj hjul",
+      "noLink": "Ingen länk",
+      "helpText": "Länka denna händelse till ett annat hjul för referens eller detaljer",
+      "linkedTo": "Länkad till:",
+      "loadingWheels": "Laddar hjul...",
+      "noWheelsAvailable": "Inga hjul tillgängliga för länkning",
+      "recurringRestriction": "Återkommande aktiviteter kan inte länkas till andra hjul"
+    }
   },
   "editItemModal": {
     "title": "Redigera händelse",
+    "basicInfo": "Grundläggande information",
+    "categorization": "Kategorisering",
     "itemNameLabel": "Namn *",
     "itemNamePlaceholder": "t.ex., Julkampanj",
     "itemNameRequired": "Namn är obligatoriskt",
@@ -195,21 +231,57 @@
     "linkedTo": "Länkat till",
     "linkWillOpenInNewTab": "Att klicka på länkikonen öppnar detta hjul i en ny flik",
     "startDateLabel": "Startdatum *",
+    "startDateAutoCalculated": "(auto-beräknat)",
     "startDateRequired": "Startdatum är obligatoriskt",
     "endDateLabel": "Slutdatum *",
+    "endDateDurationCalculated": "(varaktighet beräknas)",
     "endDateRequired": "Slutdatum är obligatoriskt",
     "endDateInvalid": "Slutdatum måste vara efter startdatum",
     "timeLabel": "Tid",
     "timePlaceholder": "t.ex., 09:00 - 17:00",
     "recurringNotice": "Återkommande aktivitet",
     "recurringNoticeText": "Detta är en del av en återkommande aktivitetsserie. Ändringar påverkar endast denna instans.",
+    "descriptionLabel": "Beskrivning",
+    "descriptionPlaceholder": "Lägg till detaljer om denna aktivitet...",
+    "advancedSettings": "Avancerade inställningar",
+    "showAdvancedSettings": "+ Avancerade inställningar",
+    "hideAdvancedSettings": "Dölj",
     "deleteButton": "Radera",
     "cancel": "Avbryt",
     "save": "Spara",
     "deleteConfirmTitle": "Radera händelse?",
     "deleteConfirmMessage": "Är du säker på att du vill radera \"{itemName}\"? Denna åtgärd kan inte ångras.",
     "deleteConfirmCancel": "Avbryt",
-    "deleteConfirmDelete": "Radera"
+    "deleteConfirmDelete": "Radera",
+    "dependencies": {
+      "title": "Aktivitetsberoende",
+      "dependsOnLabel": "Beror på aktivitet",
+      "noDependency": "Ingen (oberoende aktivitet)",
+      "typeLabel": "Beroendetyp",
+      "typeFinishToStart": "Slut → Start (vanligast)",
+      "typeStartToStart": "Start → Start (parallell)",
+      "typeFinishToFinish": "Slut → Slut (synkroniserad)",
+      "typeHintFinishToStart": "Denna aktivitet startar när föregående avslutas",
+      "typeHintStartToStart": "Denna aktivitet startar samtidigt med föregående",
+      "typeHintFinishToFinish": "Denna aktivitet avslutas samtidigt med föregående",
+      "lagDaysLabel": "Fördröjning (dagar)",
+      "lagDaysPlaceholder": "0",
+      "lagDaysHint": "Antal dagar att vänta efter föregående aktivitet (0 = ingen fördröjning)",
+      "chainTitle": "🔗 Beroendekedja:",
+      "currentItem": "(denna)",
+      "recurringRestriction": "Återkommande aktiviteter kan inte ha beroenden",
+      "startDateAutoCalculated": "Startdatum beräknas automatiskt baserat på beroendet"
+    },
+    "wheelLinking": {
+      "title": "Länka till annat hjul",
+      "selectLabel": "Välj hjul",
+      "noLink": "Ingen länk",
+      "helpText": "Länka denna händelse till ett annat hjul för referens eller detaljer",
+      "linkedTo": "Länkad till:",
+      "loadingWheels": "Laddar hjul...",
+      "noWheelsAvailable": "Inga hjul tillgängliga för länkning",
+      "recurringRestriction": "Återkommande aktiviteter kan inte länkas till andra hjul"
+    }
   },
   "pageNavigator": {
     "createFirstYear": "Skapa första året",
