Add i18n support to team invitations and clean up messaging

--- a/src/i18n/locales/en/teams.json
+++ b/src/i18n/locales/en/teams.json
@@ -84,19 +84,21 @@
     "emailPlaceholder": "user@example.com",
     "emailRequired": "Email is required",
     "emailInvalid": "Invalid email address",
-    "emailHint": "The person will receive an invitation and can accept it from their account.",
+    "emailHint": "A welcome email with invitation link will be sent automatically.",
+    "emailNoticeTitle": "📧 Email invitation sent automatically",
+    "emailNoticeDescription": "When you send the invitation, the recipient will receive an email with a link to join the team.",
     "errorDuplicate": "An invitation has already been sent to this email address",
     "errorLimitReached": "This team already has the maximum number of members on the free plan.",
     "cancel": "Cancel",
     "send": "Send invitation",
     "sending": "Sending...",
-    "successTitle": "Invitation created!",
-    "successDescription": "Share the link below with {{email}}",
-    "inviteLinkLabel": "Invitation link:",
+    "successTitle": "Invitation sent!",
+    "emailSent": "A welcome email has been sent to <strong>{{email}}</strong>.",
+    "inviteLinkLabel": "Alternative: Share link manually",
     "copyLink": "Copy",
     "linkCopied": "Copied!",
     "tipTitle": "💡 Tip:",
-    "tipDescription": "Send the link via email, Slack, or WhatsApp. When the recipient clicks the link, they will automatically be added to the team when they log in or create an account.",
+    "tipDescription": "If the email doesn't arrive, you can share the link via Slack, WhatsApp, or other messaging.",
     "close": "Close"
   },
   "myInvitations": {
