--- a/src/i18n/locales/sv/teams.json
+++ b/src/i18n/locales/sv/teams.json
@@ -84,19 +84,21 @@
     "emailPlaceholder": "anvandare@example.com",
     "emailRequired": "E-post är obligatoriskt",
     "emailInvalid": "Ogiltig e-postadress",
-    "emailHint": "Personen kommer att få en inbjudan och kan acceptera den från sitt konto.",
+    "emailHint": "Ett välkomstmail med inbjudningslänk skickas automatiskt.",
+    "emailNoticeTitle": "📧 E-postinbjudan skickas automatiskt",
+    "emailNoticeDescription": "När du skickar inbjudan får mottagaren ett e-postmeddelande med en länk för att gå med i teamet.",
     "errorDuplicate": "En inbjudan har redan skickats till denna e-postadress",
     "errorLimitReached": "Teamet har redan nått maxantalet medlemmar på gratis-planen.",
     "cancel": "Avbryt",
     "send": "Skicka inbjudan",
     "sending": "Skickar...",
-    "successTitle": "Inbjudan skapad!",
-    "successDescription": "Dela länken nedan med {{email}}",
-    "inviteLinkLabel": "Inbjudningslänk:",
+    "successTitle": "Inbjudan skickad!",
+    "emailSent": "Ett välkomstmail har skickats till <strong>{{email}}</strong>.",
+    "inviteLinkLabel": "Alternativ: Dela länken manuellt",
     "copyLink": "Kopiera",
     "linkCopied": "Kopierad!",
     "tipTitle": "💡 Tips:",
-    "tipDescription": "Skicka länken via e-post, Slack, eller WhatsApp. När mottagaren klickar på länken kommer de automatiskt att läggas till i teamet när de loggar in eller skapar ett konto.",
+    "tipDescription": "Om e-postmeddelandet inte kommer fram kan du dela länken via Slack, WhatsApp eller annat meddelande.",
     "close": "Stäng"
   },
   "myInvitations": {
