Simplify invite success dialog text

--- a/src/i18n/locales/en/teams.json
+++ b/src/i18n/locales/en/teams.json
@@ -84,9 +84,9 @@
     "emailPlaceholder": "user@example.com",
     "emailRequired": "Email is required",
     "emailInvalid": "Invalid email address",
-    "emailHint": "A welcome email with invitation link will be sent automatically.",
+    "emailHint": "The person will receive an email with a link to join the team.",
     "emailNoticeTitle": "📧 Email invitation sent automatically",
-    "emailNoticeDescription": "When you send the invitation, the recipient will receive an email with a link to join the team.",
+    "emailNoticeDescription": "The recipient will automatically receive an email with the invitation link.",
     "errorDuplicate": "An invitation has already been sent to this email address",
     "errorLimitReached": "This team already has the maximum number of members on the free plan.",
     "cancel": "Cancel",
@@ -94,11 +94,11 @@
     "sending": "Sending...",
     "successTitle": "Invitation sent!",
     "emailSent": "A welcome email has been sent to <strong>{{email}}</strong>.",
-    "inviteLinkLabel": "Alternative: Share link manually",
+    "inviteLinkLabel": "Invitation link:",
     "copyLink": "Copy",
     "linkCopied": "Copied!",
     "tipTitle": "💡 Tip:",
-    "tipDescription": "If the email doesn't arrive, you can share the link via Slack, WhatsApp, or other messaging.",
+    "tipDescription": "If the email doesn't arrive, you can share the link manually.",
     "close": "Close"
   },
   "myInvitations": {
