--- a/src/i18n/locales/sv/teams.json
+++ b/src/i18n/locales/sv/teams.json
@@ -84,9 +84,9 @@
     "emailPlaceholder": "anvandare@example.com",
     "emailRequired": "E-post är obligatoriskt",
     "emailInvalid": "Ogiltig e-postadress",
-    "emailHint": "Ett välkomstmail med inbjudningslänk skickas automatiskt.",
+    "emailHint": "Personen kommer att få ett e-postmeddelande med en länk för att gå med i teamet.",
     "emailNoticeTitle": "📧 E-postinbjudan skickas automatiskt",
-    "emailNoticeDescription": "När du skickar inbjudan får mottagaren ett e-postmeddelande med en länk för att gå med i teamet.",
+    "emailNoticeDescription": "Mottagaren kommer automatiskt att få ett e-postmeddelande med inbjudningslänken.",
     "errorDuplicate": "En inbjudan har redan skickats till denna e-postadress",
     "errorLimitReached": "Teamet har redan nått maxantalet medlemmar på gratis-planen.",
     "cancel": "Avbryt",
@@ -94,11 +94,11 @@
     "sending": "Skickar...",
     "successTitle": "Inbjudan skickad!",
     "emailSent": "Ett välkomstmail har skickats till <strong>{{email}}</strong>.",
-    "inviteLinkLabel": "Alternativ: Dela länken manuellt",
+    "inviteLinkLabel": "Inbjudningslänk:",
     "copyLink": "Kopiera",
     "linkCopied": "Kopierad!",
     "tipTitle": "💡 Tips:",
-    "tipDescription": "Om e-postmeddelandet inte kommer fram kan du dela länken via Slack, WhatsApp eller annat meddelande.",
+    "tipDescription": "Om e-postmeddelandet inte kommer fram kan du dela länken manuellt.",
     "close": "Stäng"
   },
   "myInvitations": {
